Fix tools on mobile.

--- a/src/styles/components/_hawk-facet-rail.scss
+++ b/src/styles/components/_hawk-facet-rail.scss
@@ -1,8 +1,13 @@
 .hawk-facet-rail {
 	border: 1px solid $primary;
 	background-color: $grey2;
-	min-width: 230px;
-	margin-right: 1em;
+	width: 100%;
+
+	@include md {
+		width: auto;
+		min-width: 230px;
+		margin-right: 1em;
+	}
 
 	@include lg {
 		min-width: 300px;
