--- a/src/styles/components/_hawk-pagination.scss
+++ b/src/styles/components/_hawk-pagination.scss
@@ -1,12 +1,27 @@
 .hawk-pagination {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
+	justify-content: center;
+
+	@include md {
+		justify-content: flex-start;
+	}
 }
 
 .hawk-pagination__controls {
 	display: flex;
 	align-items: center;
-	margin-right: 15px;
+	justify-content: center;
+	margin-right: 0;
+	margin-bottom: 15px;
+	width: 100%;
+
+	@include sm {
+		width: auto;
+		margin-bottom: 0;
+		margin-right: 15px;
+	}
 }
 
 .hawk-pagination__item {
@@ -26,4 +41,8 @@
 		width: 90px;
 		padding-right: 30px;
 	}
+}
+
+.hawk-pagination__total-text {
+	white-space: nowrap;
 }
