--- a/src/styles/components/_hawk-results.scss
+++ b/src/styles/components/_hawk-results.scss
@@ -1,8 +1,11 @@
 .hawk-results__item {
 	max-width: 300px;
 	margin: 0 0 2em;
+	width: 100%;
 
-	width: 50%;
+	@include md {
+		width: 50%;
+	}
 
 	@include lg {
 		width: 25%;
