--- a/src/styles/components/_hawk.scss
+++ b/src/styles/components/_hawk.scss
@@ -9,4 +9,9 @@
 
 .hawk__body {
 	display: flex;
+	flex-wrap: wrap;
+
+	@include md {
+		flex-wrap: nowrap;
+	}
 }
